[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/Images/Scenery/Stage1/fundo1_1.png" type="Texture" id=1]
[ext_resource path="res://scenes/tilesets/TileCity.tres" type="TileSet" id=2]
[ext_resource path="res://scenes/tilesets/TileRoad.tres" type="TileSet" id=3]
[ext_resource path="res://assets/Images/Scenery/ceu1.png" type="Texture" id=4]
[ext_resource path="res://scenes/player/PlayerBody.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/animation/DialogGaridog.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/stages/StageDialog.gd" type="Script" id=7]
[ext_resource path="res://scenes/menu/MenuManager.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/Font/text_ui.tres" type="DynamicFont" id=9]
[ext_resource path="res://scenes/game_ui/LevelComplete.tscn" type="PackedScene" id=10]

[sub_resource type="Animation" id=1]
resource_name = "deafult"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="StageDialog" type="Node2D"]
script = ExtResource( 7 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 392, 297 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 0, 1000, 320 )

[node name="Sprite" type="Sprite" parent="Sprite"]
show_behind_parent = true
position = Vector2( 0, -488 )
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 0, 0, 600, 640 )

[node name="Chão" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 65535, 1, 0, 25, 1, 0, 131071, 1, 0, 65561, 1, 0, 196607, 1, 0, 131097, 1, 0, 262143, 1, 0, 196633, 1, 0, 327679, 1, 0, 262169, 1, 0, 393215, 1, 0, 327705, 1, 0, 458751, 1, 0, 393241, 1, 0, 524287, 1, 0, 458777, 1, 0, 589823, 1, 0, 524313, 1, 0, 655359, 1, 0, 589849, 1, 0, 720895, 1, 0, 655385, 1, 0, 786431, 1, 0, 720921, 1, 0, 851967, 1, 0, 786439, 1, 131077, 786440, 1, 1, 786441, 1, 1, 786442, 1, 1, 786443, 1, 1, 786444, 1, 1, 786445, 1, 1, 786446, 1, 1, 786447, 1, 1, 786448, 1, 1, 786449, 1, 131078, 786457, 1, 0, 917503, 1, 131077, 851968, 1, 1, 851969, 1, 1, 851970, 1, 1, 851971, 1, 1, 851972, 1, 1, 851973, 1, 1, 851974, 1, 1, 851975, 1, 196613, 851976, 1, 65539, 851977, 1, 65542, 851978, 1, 65541, 851979, 1, 65537, 851980, 1, 65540, 851981, 1, 65539, 851982, 1, 65540, 851983, 1, 65539, 851984, 1, 65540, 851985, 1, 196614, 851986, 1, 1, 851987, 1, 1, 851988, 1, 1, 851989, 1, 1, 851990, 1, 1, 851991, 1, 1, 851992, 1, 1, 851993, 1, 1, 851994, 1, 131078, 983039, 1, 131075, 917504, 1, 131073, 917505, 1, 131073, 917506, 1, 131073, 917507, 1, 131073, 917508, 1, 131073, 917509, 1, 131073, 917510, 1, 131073, 917511, 1, 131073, 917512, 1, 131073, 917513, 1, 131073, 917514, 1, 131073, 917515, 1, 131073, 917516, 1, 131073, 917517, 1, 131073, 917518, 1, 131073, 917519, 1, 131073, 917520, 1, 131073, 917521, 1, 131073, 917522, 1, 131073, 917523, 1, 131073, 917524, 1, 131073, 917525, 1, 131073, 917526, 1, 131073, 917527, 1, 131073, 917528, 1, 131073, 917529, 1, 131073, 917530, 1, 131076 )

[node name="Predios" type="TileMap" parent="."]
visible = false
z_index = -3
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 196629, 0, 0, 196630, 0, 1, 196631, 0, 2, 262165, 0, 65536, 262166, 0, 65537, 262167, 0, 65538, 327684, 0, 0, 327685, 0, 2, 327701, 0, 65536, 327702, 0, 65537, 327703, 0, 65538, 393220, 0, 65536, 393221, 0, 65538, 393235, 0, 0, 393236, 0, 1, 393237, 0, 3, 393238, 0, 65537, 393239, 0, 65538, 458754, 0, 0, 458755, 0, 1, 458756, 0, 3, 458757, 0, 65539, 458758, 0, 1, 458759, 0, 2, 458771, 0, 65536, 458772, 0, 65537, 458773, 0, 65537, 458774, 0, 65537, 458775, 0, 65538, 524290, 0, 65536, 524291, 0, 65537, 524292, 0, 65537, 524293, 0, 65537, 524294, 0, 65537, 524295, 0, 65538, 524307, 0, 65536, 524308, 0, 65537, 524309, 0, 65537, 524310, 0, 65537, 524311, 0, 65538, 589826, 0, 65536, 589827, 0, 65537, 589828, 0, 65537, 589829, 0, 65537, 589830, 0, 65537, 589831, 0, 65538, 589843, 0, 65536, 589844, 0, 65537, 589845, 0, 65537, 589846, 0, 65537, 589847, 0, 65538, 655362, 0, 65536, 655363, 0, 65537, 655364, 0, 65537, 655365, 0, 65537, 655366, 0, 65537, 655367, 0, 65538, 655379, 0, 65536, 655380, 0, 65537, 655381, 0, 65537, 655382, 0, 65537, 655383, 0, 65538, 720898, 0, 65536, 720899, 0, 65537, 720900, 0, 65537, 720901, 0, 65537, 720902, 0, 65537, 720903, 0, 65538, 720915, 0, 65536, 720916, 0, 65537, 720917, 0, 65537, 720918, 0, 65537, 720919, 0, 65538, 786434, 0, 65536, 786435, 0, 65537, 786436, 0, 65537, 786437, 0, 65537, 786438, 0, 65537, 786439, 0, 65538, 786451, 0, 65536, 786452, 0, 65537, 786453, 0, 65537, 786454, 0, 65537, 786455, 0, 65538, 851970, 0, 65536, 851971, 0, 65537, 851972, 0, 65537, 851973, 0, 65537, 851974, 0, 65537, 851975, 0, 65538, 851987, 0, 131072, 851988, 0, 131073, 851989, 0, 131073, 851990, 0, 131073, 851991, 0, 0, 851992, 0, 2, 917506, 0, 131072, 917507, 0, 131073, 917508, 0, 131073, 917509, 0, 131073, 917510, 0, 131073, 917511, 0, 131074, 917527, 0, 131072, 917528, 0, 131074 )

[node name="DialogTimothy" parent="." instance=ExtResource( 6 )]
position = Vector2( -8.51462, 70.4448 )

[node name="PlayerBody" parent="." instance=ExtResource( 5 )]
position = Vector2( 304, 367 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="CanvasLayer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -224.0
margin_top = 80.0
margin_right = 224.0
margin_bottom = 108.0
custom_fonts/font = ExtResource( 9 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Aperte G ou abra o menu pelo botão de Pause acima e clique nos resíduos na Galeria!"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuManager" parent="CanvasLayer" instance=ExtResource( 8 )]

[node name="LevelComplete" parent="CanvasLayer" instance=ExtResource( 10 )]

[node name="Polygon2D" type="Polygon2D" parent="CanvasLayer"]
visible = false
color = Color( 0, 0, 0, 1 )
polygon = PoolVector2Array( -129.213, -8.7894, 988.759, -24.5039, 961.82, 577.136, -167.377, 534.482 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/Polygon2D"]
autoplay = "deafult"
anims/deafult = SubResource( 1 )

[connection signal="finished" from="DialogTimothy" to="." method="_on_DialogTimothy_finished"]
[connection signal="menu_closed" from="CanvasLayer/MenuManager" to="." method="_on_MenuManager_menu_closed"]
[connection signal="visibility_changed" from="CanvasLayer/MenuManager/Galeria" to="." method="_on_Galeria_visibility_changed"]

[editable path="CanvasLayer/MenuManager"]
